--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
    </header>
 
 <div id = "content-wrapper">
-  <div id = "style-guide-header">
+  <section id = "style-guide-header">
         <h1>Portfolio Project - Style Guide</h1>
         <nav class = "navigation-items">        
           <a href="#interactive_elements">Interactive Elements</a>
           <a href="#text_elements">Text Elements</a>
           <a href="#citations">Citations</a>
         </nav>
-  </div>
+  </section>
 <!--------------------------BRANDING COMPONENTS SECTION //---------------------------->
     <section class = "style-guide-section" id="visual-definition">
       <h2> Visual Definition </h2>
