--- a/macaron.html
+++ b/macaron.html
@@ -14,92 +14,105 @@
   <body>
     <script src="script.js"></script>
 <!--------------------------HEADER //-------------------------------------------------->
-   <header>
-     <nav class="navigation">
-       <h2 id = "logo"><em>Howard</em> Chang</h2>
-       <div class="navigation-items">
-         <a href="home.html">Home</a>
-         <a href="projects.html">Projects</a>
-         <a href="index.html">Contact</a>
-       </div>
-     </nav>
-   </header>
-
-   <section id = "project-intro">
-    <h1>Macaron</h1>
-   
-   <div id = "project-page-brief">
-     <div id = "project-brief-left">
-
-       <h3>Project Goal</h3>
-       <p>To create an unique brand, and then to create a website using html and css.</p>
-
-       <h4>Project Duration</h4>
-       <ul>
-        <li>4 Weeks</li>
-      </ul>
-
-     </div> <!-- left side -->
-
-     <div id = "project-brief-right">
-
-      <h4>Tool Used </h4>
-      <div class = "multi-column-list">
-        <ul>
-          <li>Figma</li>
-          <li>HTML/CSS</li>
-        </ul>
-        <ul>
-          <li>Davinci Resolve</li>
-          <li>GIT</li>
-        </ul>
+<header>
+  <div id = "navigation-wrapper">
+    <nav id="navigation">
+      <h2 id = "logo"><em>Howard</em> Chang</h2>
+      <div class="navigation-items">
+        <a href="home.html">Home</a>
+        <a href="home.html#projects">Projects</a>
+        <a href="home.html#footer-content">Contact</a>
       </div>
+    </nav>
+  </div>
+</header>
 
-      <h4>Project Type</h4>
-      <ul>
-        <li>Group Project</li>
-      </ul>
+   <!--------------------------SIDE BAR //-------------------------------------------------->
+   <div id = "side-bar">
+    <div class = "side-bar-line"></div>
+    <a class = "social-logo" id="linkedin-logo-side" href="https://www.linkedin.com/in/howard-chang-b6b677167/"></a>
+    <a class = "social-logo" id="instagram-logo-side" href="https://www.instagram.com/mr.bubblehoneytea/"></a> 
+    <a class = "social-logo" id="facebook-logo-side" href="https://www.facebook.com/corynigiri?mibextid=ZbWKwL"></a> 
+    <div class = "side-bar-line"></div>
+  </div>
 
-      <h4>My Role</h4>
-      <div class = "multi-column-list">
+  <div id = "content">
+    <section id = "project-intro">
+      <h1>Macaron</h1>
+    
+    <div id = "project-page-brief">
+      <div id = "project-brief-left">
+
+        <h3>Project Goal</h3>
+        <p>To create an unique brand, and then to create a website using html and css.</p>
+
+        <h4>Project Duration</h4>
         <ul>
-          <li>UI/UX Design</li>
-          <li>HTML/CSS Coding</li>
+          <li>4 Weeks</li>
         </ul>
+
+      </div> <!-- left side -->
+
+      <div id = "project-brief-right">
+
+        <h4>Tool Used </h4>
+        <div class = "multi-column-list">
+          <ul>
+            <li>Figma</li>
+            <li>HTML/CSS</li>
+          </ul>
+          <ul>
+            <li>Davinci Resolve</li>
+            <li>GIT</li>
+          </ul>
+        </div>
+
+        <h4>Project Type</h4>
         <ul>
-          <li>Branding</li>
+          <li>Group Project</li>
         </ul>
+
+        <h4>My Role</h4>
+        <div class = "multi-column-list">
+          <ul>
+            <li>UI/UX Design</li>
+            <li>HTML/CSS Coding</li>
+          </ul>
+          <ul>
+            <li>Branding</li>
+          </ul>
+        </div>
+
+      </div><!-- right side -->
       </div>
+    </section>
 
-     </div><!-- right side -->
-    </div>
-   </section>
-
-   <section id = "project-content">
-    <img id = "macaron-picture" src="resources/macaron.png" alt="screenshot of the page"></img>
-    <p>The Macarons was a two person group project where the students were to create a unique brand from scratch and create a tailor made website for said brand.</p>
+    <section id = "project-content">
+      <img id = "macaron-picture" src="resources/macaron.png" alt="screenshot of the page"></img>
+      <p>The Macarons was a two person group project where the students were to create a unique brand from scratch and create a tailor made website for said brand.</p>
 
 
-    <p>We finalized with a local Macaron shop located in Montreal that specializes in making delicious macarons that come in many different flavours, the shop’s branding is accompanied by a cute mouse mascot. The website aims to best emphasize the company’s various macaron products which come in many different flavours. Additionally, the website aims to promote the company’s youthful, as well as classical nature. Therefore, creating a strong brand identity, and a website that can uphold that identity consistently is the key aspect to making this project successful. 
-    </p>
+      <p>We finalized with a local Macaron shop located in Montreal that specializes in making delicious macarons that come in many different flavours, the shop’s branding is accompanied by a cute mouse mascot. The website aims to best emphasize the company’s various macaron products which come in many different flavours. Additionally, the website aims to promote the company’s youthful, as well as classical nature. Therefore, creating a strong brand identity, and a website that can uphold that identity consistently is the key aspect to making this project successful. 
+      </p>
 
-    <p>I assisted in creating a suitable visual style that the website will be built around, before any feature was actually implemented for the site, through iterative and repeated experimentation and prototype building on figma. I’ve also taken initiative and planned out the page layouts and the site functions that would need to be included. More over, I’ve created an introduction video for the brand that would be used as a great first impression as the user enters the landing page.
-    Additionally, I took on the role of being the primary coder in the later stage of development, responsible for replicating much of our final prototype design in html and css. As the project was developed in a git environment, I placed heavy emphasis on making the code clean and readable to prevent future problems and technical debt.</p>
+      <p>I assisted in creating a suitable visual style that the website will be built around, before any feature was actually implemented for the site, through iterative and repeated experimentation and prototype building on figma. I’ve also taken initiative and planned out the page layouts and the site functions that would need to be included. More over, I’ve created an introduction video for the brand that would be used as a great first impression as the user enters the landing page.
+      Additionally, I took on the role of being the primary coder in the later stage of development, responsible for replicating much of our final prototype design in html and css. As the project was developed in a git environment, I placed heavy emphasis on making the code clean and readable to prevent future problems and technical debt.</p>
 
-    <p>
-    Everything combined, we created a phenomenal experience for users, from its aesthetics attracting users to find out more about the company and its macarons, to the seemingless and accessible process of buying the macarons, with the users being able to realize a strong and well defined company identity at the same time.
-    </p>
+      <p>
+      Everything combined, we created a phenomenal experience for users, from its aesthetics attracting users to find out more about the company and its macarons, to the seemingless and accessible process of buying the macarons, with the users being able to realize a strong and well defined company identity at the same time.
+      </p>
 
-    <button class = "button" onclick="toMacaronProject()"> Check out the project here!</button>
+      <button class = "button" onclick="toMacaronProject()"> Check out the project here!</button>
 
-   </section>
-
+    </section>
+  </div>
   
   <footer>
     <div id = "footer-content">
       <h2> Let's Get in Touch, and Create Something Together </h2>
       <h4> howardchang822@hotmail.com <em>|</em> 778-822-6068 </h4>
       <p>Designed by Howard Chang</p>
+      <a href="index.html">Style Guide</a>
     </div>
   </footer>
 
