--- a/home.html
+++ b/home.html
@@ -20,9 +20,9 @@
         <nav id="navigation">
           <h2 id = "logo"><em>Howard</em> Chang</h2>
           <div class="navigation-items">
-            <a href="home.html">Home</a>
-            <a href="home.html#projects">Projects</a>
-            <a href="home.html#footer-content">Contact</a>
+            <a href="home.html">My Works</a>
+            <a href="home.html">About</a>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Resume</a>
           </div>
         </nav>
       </div>
@@ -53,7 +53,7 @@
           </p>
         </div>
         <div id = "introduction-right">
-          <img id = "profile-picture" src="resources/picture.png" alt="howard's picture"></img>
+          <img id = "profile-picture" class = "image-with-frame" src="resources/picture.png" alt="howard's picture"></img>
         </div>
       </section>
 
