--- a/rabbitats.html
+++ b/rabbitats.html
@@ -21,8 +21,8 @@
         <nav id="navigation">
           <h2 id = "logo"><em>Howard</em> Chang</h2>
           <div class="navigation-items">
-            <a href="home.html">My Works</a>
-            <a href="home.html">About</a>
+            <a href="index.html">My Works</a>
+            <a href="index.html">About</a>
             <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Resume</a>
           </div>
         </nav>
