--- a/rabbitats.html
+++ b/rabbitats.html
@@ -32,9 +32,11 @@
    <!--------------------------SIDE BAR //-------------------------------------------------->
    <div id = "side-bar">
     <div class = "side-bar-line"></div>
-    <a class = "social-logo" id="linkedin-logo-side" href="https://www.linkedin.com/in/howard-chang-b6b677167/"></a>
-    <a class = "social-logo" id="instagram-logo-side" href="https://www.instagram.com/mr.bubblehoneytea/"></a> 
-    <a class = "social-logo" id="facebook-logo-side" href="https://www.facebook.com/corynigiri?mibextid=ZbWKwL"></a> 
+    <div id = "side-bar-logo-list">
+      <a class = "social-logo" id="linkedin-logo-side" href="https://www.linkedin.com/in/howard-chang-b6b677167/"></a>
+      <a class = "social-logo" id="instagram-logo-side" href="https://www.instagram.com/mr.bubblehoneytea/"></a> 
+      <a class = "social-logo" id="facebook-logo-side" href="https://www.facebook.com/corynigiri?mibextid=ZbWKwL"></a> 
+    </div>
     <div class = "side-bar-line"></div>
   </div>
 
